<resources>
    <string name="app_name">모두의 받아쓰기(교사용)</string>
    <string name="select_quiz">→ 문제 선택</string>
    <string name="dictation_end">→ 받아쓰기 종료</string>
    <string name="teacher_id">599b03151c6e6f0159a72815</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_id">아이디(영문/숫자,4자 이상)</string>
    <string name="prompt_login_id">아이디</string>
    <string name="prompt_password">비밀번호(4자 이상)</string>
    <string name="prompt_login_password">비밀번호</string>
    <string name="prompt_school">학교</string>
    <string name="prompt_grade">학년</string>
    <string name="prompt_classNumber">반</string>
    <string name="prompt_name">이름</string>
    <string name="prompt_sign_up"><u>모두의 받아쓰기가 처음이세요?</u></string>
    <string name="prompt_sign_in">로그인</string>
    <string name="prompt_auto_login">자동 로그인</string>
    <string name="action_sign_up">회원가입</string>
    <string name="action_duplicate_check">중복검사</string>
    <string name="action_school_check">학교검색</string>

    <string name="action_sign_in_short">회원가입</string>
    <string name="error_invalid_teacher_id">4자 이상 입력해주세요.</string>
    <string name="error_duplicate_teacher_id">아이디 중복검사를 해주세요.</string>
    <string name="error_invalid_password">4자 이상 입력해주세요.</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">입력해주세요.</string>

    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="menu_matching_applicant">학생 등록 요청</string>
    <string name="menu_student_list">학생 목록</string>
    <string name="menu_student_edit">학생 관리</string>
    <string name="menu_list_by_period">회차 별 시험 리스트</string>
    <string name="menu_create_question">문제 작성</string>
    <string name="menu_logout">로그아웃</string>
    <string name="quiz_start">→ 문제 시작</string>
    <string name="no_user">추가된 학생이 없습니다.</string>
    <string name="no_quiz_result">시험 이력이 없습니다.</string>
    <string name="no_matching_req">들어온 매칭 신청이 없습니다.</string>
</resources>
