<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.blackdog.dictation_teacher.Activity.LoginActivity">

    <include layout="@layout/toolbar" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/loginLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="20dp">

        <EditText
            android:id="@+id/etLoginId"
            android:layout_width="fill_parent"
            android:layout_height="48.0dip"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="2.0dip"
            android:layout_marginLeft="20.0dip"
            android:layout_marginRight="20.0dip"
            android:layout_marginTop="16dp"
            android:background="#ffffffff"
            android:hint="@string/prompt_login_id"
            android:imeOptions="actionNext"
            android:inputType="textVisiblePassword"
            android:paddingLeft="20.0dip"
            android:textColor="#333333"
            android:textColorHint="#aaaaaa">

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/etLoginPassword"
            android:layout_width="fill_parent"
            android:layout_height="48.0dip"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="2.0dip"
            android:layout_marginLeft="20.0dip"
            android:layout_marginRight="20.0dip"
            android:layout_marginTop="8dp"
            android:background="#ffffff"
            android:hint="@string/prompt_login_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:paddingLeft="20.0dip"
            android:textColor="#333333"
            android:textColorHint="#aaaaaa"
            app:layout_constraintTop_toBottomOf="@id/etLoginId" />

        <LinearLayout
            android:id="@+id/autoLoginLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            app:layout_constraintLeft_toLeftOf="@id/etLoginPassword"
            app:layout_constraintTop_toBottomOf="@id/etLoginPassword">

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/cbAutoLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prompt_auto_login"
                android:textColor="#000000"
                android:textSize="@dimen/text_size" />
        </LinearLayout>

        <Button
            android:id="@+id/btLogin"
            android:layout_width="fill_parent"
            android:layout_height="40.0dip"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10.0dip"
            android:layout_marginLeft="20.0dip"
            android:layout_marginRight="20.0dip"
            android:layout_marginTop="10dp"
            android:background="@drawable/border_sign"
            android:text="@string/prompt_sign_in"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/autoLoginLayout" />

        <TextView
            android:id="@+id/tvSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:clickable="true"
            android:text="@string/prompt_sign_up"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="@id/loginLayout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
    </android.support.constraint.ConstraintLayout>

</LinearLayout>
