<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sign"
    android:gravity="center_horizontal"
    android:orientation="vertical"

    tools:context="com.blackdog.dictation_teacher.Activity.SignUpActivity">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <!-- Login progress -->
            <ProgressBar
                android:id="@+id/sign_up_progress"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:visibility="gone" />

            <ScrollView
                android:id="@+id/sign_up_form"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/teacherId_login_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10px"
                        android:layout_marginTop="16dp"
                        android:orientation="horizontal"
                        android:weightSum="10">


                        <EditText
                            android:id="@+id/etLoginId"
                            android:layout_width="match_parent"
                            android:layout_height="48.0dip"
                            android:layout_marginLeft="20.0dip"
                            android:layout_marginRight="20.0dip"
                            android:layout_weight="3"
                            android:background="@drawable/signedittext"
                            android:hint="아이디(4자 이상)"
                            android:inputType="textVisiblePassword"
                            android:maxLines="1"
                            android:paddingLeft="20.0dip"
                            android:textColor="#FFFFFF"
                            android:textColorHighlight="#FFFFFF"
                            android:textColorHint="#FFFFFF" />

                        <Button
                            android:id="@+id/duplication_check_button"
                            style="?android:textAppearanceSmall"
                            android:layout_width="fill_parent"
                            android:layout_height="48.0dip"
                            android:layout_weight="7"
                            android:background="@drawable/signbutton"
                            android:text="@string/action_duplicate_check"
                            android:textColor="#FFFFFF"
                            android:textSize="@dimen/text_size"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <EditText
                        android:id="@+id/etSignUpPassword"
                        android:layout_width="match_parent"
                        android:layout_height="48.0dip"
                        android:layout_marginBottom="10px"
                        android:layout_marginLeft="20.0dip"
                        android:layout_marginRight="20.0dip"
                        android:layout_marginTop="10px"
                        android:background="@drawable/signedittext"
                        android:hint="@string/prompt_password"
                        android:inputType="textVisiblePassword"
                        android:maxLines="1"
                        android:paddingLeft="20.0dip"
                        android:textColor="#FFFFFF"
                        android:textColorHighlight="#FFFFFF"
                        android:textColorHint="#FFFFFF" />


                    <EditText
                        android:id="@+id/school"
                        android:layout_width="match_parent"
                        android:layout_height="48.0dip"
                        android:layout_marginBottom="10px"
                        android:layout_marginLeft="20.0dip"
                        android:layout_marginRight="20.0dip"
                        android:layout_marginTop="10px"
                        android:background="@drawable/signedittext"
                        android:hint="@string/prompt_school"
                        android:inputType="textVisiblePassword"
                        android:maxLines="1"
                        android:paddingLeft="20.0dip"
                        android:textColor="#FFFFFF"
                        android:textColorHighlight="#FFFFFF"
                        android:textColorHint="#FFFFFF" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10px"
                        android:layout_marginTop="10px"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/grade"
                            android:layout_width="match_parent"
                            android:layout_height="48.0dip"
                            android:layout_marginLeft="20.0dip"
                            android:layout_marginRight="10.0dip"
                            android:layout_weight="1"
                            android:background="@drawable/signedittext"
                            android:hint="@string/prompt_grade"
                            android:inputType="textVisiblePassword"
                            android:maxLines="1"
                            android:nextFocusDown="@+id/classNumber"
                            android:paddingLeft="20.0dip"
                            android:textColor="#FFFFFF"
                            android:textColorHighlight="#FFFFFF"
                            android:textColorHint="#FFFFFF" />


                        <EditText
                            android:id="@+id/classNumber"
                            android:layout_width="match_parent"
                            android:layout_height="48.0dip"
                            android:layout_marginLeft="10.0dip"
                            android:layout_marginRight="20.0dip"
                            android:layout_weight="1"
                            android:background="@drawable/signedittext"
                            android:hint="@string/prompt_classNumber"
                            android:inputType="textVisiblePassword"
                            android:maxLines="1"
                            android:nextFocusDown="@+id/name"
                            android:paddingLeft="20.0dip"
                            android:textColor="#FFFFFF"
                            android:textColorHighlight="#FFFFFF"
                            android:textColorHint="#FFFFFF" />

                    </LinearLayout>


                    <EditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="48.0dip"
                        android:layout_marginBottom="10px"
                        android:layout_marginLeft="20.0dip"
                        android:layout_marginRight="20.0dip"
                        android:layout_marginTop="10px"
                        android:layout_weight="3"
                        android:background="@drawable/signedittext"
                        android:hint="@string/prompt_name"
                        android:inputType="textVisiblePassword"
                        android:maxLines="1"
                        android:paddingLeft="20.0dip"
                        android:textColor="#FFFFFF"
                        android:textColorHighlight="#FFFFFF"
                        android:textColorHint="#FFFFFF" />


                    <Button
                        android:id="@+id/sign_up_button"
                        style="?android:textAppearanceSmall"
                        android:layout_width="fill_parent"
                        android:layout_height="48.0dip"
                        android:layout_gravity="bottom"
                        android:layout_marginTop="32dp"
                        android:layout_weight="7"
                        android:background="@drawable/signbutton"
                        android:text="@string/action_sign_up"
                        android:textColor="#FFFFFF"
                        android:textSize="@dimen/text_size"
                        android:textStyle="bold" />
                </LinearLayout>

            </ScrollView>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>
